force-app/main/default/objects/b3f__Forms_General_Settings__c/b3f__Forms_General_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>3B Forms General Settings</label>
</CustomObject>