force-app/main/default/objects/b3f__Forms_General_Settings__c/fields/b3f__API_Token__c.field-meta.xml
<CustomField>
    <fullName>b3f__API_Token__c</fullName>
    <label>DEPRECATED</label>
    <length>255</length>
    <type>Text</type>
</CustomField>