force-app/main/default/objects/b3f__Forms_General_Settings__c/fields/b3f__Authorization_Session_Length__c.field-meta.xml
<CustomField>
    <fullName>b3f__Authorization_Session_Length__c</fullName>
    <defaultValue>3600</defaultValue>
    <label>Authorization Session Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>