force-app/main/default/objects/b3f__Forms_General_Settings__c/fields/b3f__Captcha_Site_Key__c.field-meta.xml
<CustomField>
    <fullName>b3f__Captcha_Site_Key__c</fullName>
    <label>Captcha Site Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>