force-app/main/default/objects/b3f__Forms_General_Settings__c/fields/b3f__Captcha_Verify_URL__c.field-meta.xml
<CustomField>
    <fullName>b3f__Captcha_Verify_URL__c</fullName>
    <defaultValue>&quot;https://www.google.com/recaptcha/api/siteverify&quot;</defaultValue>
    <label>Captcha Verify URL</label>
    <type>Url</type>
</CustomField>