force-app/main/default/objects/b3f__Forms_General_Settings__c/fields/b3f__Customer_Logo__c.field-meta.xml
<CustomField>
    <fullName>b3f__Customer_Logo__c</fullName>
    <inlineHelpText>Must be in a static resource and surfaced from a guest site. E.g. https://domain.my.salesforce-sites.com/onboarding/resource/Customer_Logo</inlineHelpText>
    <label>Customer Logo</label>
    <type>Url</type>
</CustomField>