force-app/main/default/objects/b3f__Forms_General_Settings__c/fields/b3f__Display_Full_Error_on_Form__c.field-meta.xml
<CustomField>
    <fullName>b3f__Display_Full_Error_on_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DEPRECATED</label>
    <type>Checkbox</type>
</CustomField>