force-app/main/default/objects/b3f__Forms_General_Settings__c/fields/b3f__Enforce_Strict_Permissions__c.field-meta.xml
<CustomField>
    <fullName>b3f__Enforce_Strict_Permissions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enforce Strict Permissions</label>
    <type>Checkbox</type>
</CustomField>