force-app/main/default/objects/b3f__Forms_General_Settings__c/fields/b3f__Files_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>b3f__Files_Endpoint__c</fullName>
    <defaultValue>&quot;https://x3b-sf-to-heroku-7bce82517fa6.herokuapp.com&quot;</defaultValue>
    <inlineHelpText>External endpoint for saving/getting files</inlineHelpText>
    <label>Files Endpoint</label>
    <required>true</required>
    <type>Url</type>
</CustomField>