force-app/main/default/objects/b3f__Forms_General_Settings__c/fields/b3f__Save_Attachments_as_Files__c.field-meta.xml
<CustomField>
    <fullName>b3f__Save_Attachments_as_Files__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>This will save attachments uploaded by forms as Salesforce Files</inlineHelpText>
    <label>Save Attachments as Files</label>
    <type>Checkbox</type>
</CustomField>