force-app/main/default/objects/b3f__Forms_General_Settings__c/fields/b3f__X3B_AI_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>b3f__X3B_AI_Endpoint__c</fullName>
    <defaultValue>&quot;https://x3b-ai-76854d6fa2eb.herokuapp.com/extractImage&quot;</defaultValue>
    <label>3B AI Endpoint</label>
    <type>Url</type>
</CustomField>