force-app/main/default/objects/b3f__Forms_General_Settings__c/fields/b3f__X3B_AI_Model_Name__c.field-meta.xml
<CustomField>
    <fullName>b3f__X3B_AI_Model_Name__c</fullName>
    <defaultValue>&quot;gpt-4o-mini&quot;</defaultValue>
    <label>3B AI Model Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>