force-app/main/default/objects/b3f__Forms_General_Settings__c/fields/b3f__X3B_AI_User_Prompt_File_Extraction__c.field-meta.xml
<CustomField>
    <fullName>b3f__X3B_AI_User_Prompt_File_Extraction__c</fullName>
    <inlineHelpText>Not required. Only add a user prompt if needed.</inlineHelpText>
    <label>3B AI User Prompt (File Extraction)</label>
    <type>TextArea</type>
</CustomField>